Shorten the max width for the dataset items to prevent overflow

--- a/src/components/DatasetItem.css
+++ b/src/components/DatasetItem.css
@@ -28,7 +28,7 @@
 
 .dataset .center-info {
   margin-left: 15px;
-  max-width: 230px;
+  max-width: 210px;
 }
 
 .dataset .title {
